--- a/FrontEnd/frontend/src/Components/Styles/Home.css
+++ b/FrontEnd/frontend/src/Components/Styles/Home.css
@@ -45,6 +45,10 @@ body {
 .dark-mode-toggle:hover {
     transform: scale(1.1);
 }
+.dark-mode-toggle {
+    background: black;
+    color: yellow;
+  }
 
 /* Welcome Cards */
 .welcome-cards {
